lab1/Test/L1-A-11-98.cmm
int ;
int ;
struct I_ixBBtaEJbHwiV {
}tau ( ) {
  struct SSrOxYUxMpdN3G kCdlzxuJqety9VK ;
}
float EI46OpzuoUaVHr , Un5odhHQjEhNjIz [ 1980031974 
  ] 

;
struct tR5hnDK ;
int ;
struct F_6PYzw9RlsCBFLsJ ;
int DmsWAzfv4zCBN0Q ( int yJOlZRxz ) {
  CdoLr806n8Bqqju5FthJ ;
  yxGSmOb_1_L_7 ;
  if ( O6 )   if ( Y1dFs ) {
    while ( Ulvfuczhh )     CZdZh4eyPYOpddm ;

  }else   return LaSBLZ ;

else   if ( CucobcGMFvZyx )   d_U9Ro5ElcMWkfwSXdVA 
    983045383.1270019086 ;


1929517991 }
struct struct {
  struct Uctmf5C5nQ iA ;
  int TYc1P3xS0QYBl , X5wKr2 = qEdDeUTXmxBM > RWkEpjA92L 
    / - ! ! yW8tuh9gc ( rrY = mmPJ0 || D4o && cS == Tlb 
    - r3_W8wGBBVgQ2l4TqCXE [ guq1OY9_8lTemtVgN2Z = pBuJkolm3idNT6ti 
    = z6OdQ91WK5RAZA >= DCzukGtAJWl8kfPu - xA2Lj8cY4MVlNmjs7Au 
    / - ( VP6K9qcDa = Ohhx1Icx_wv = M = BcWej && DMwaeTnNWIZDCEGcFCC 
    != auf - - FE6eehhQ3 ( MHVfqz , hzXG47 , U96sXK_mcYs5d7 
    , PmLb , DwoJg < Mi + ( Lmi61q && qZcdoDbWl0AVYr8Ky 
    <= KRd32Cq4OYPCEduAB / VJ6ZXrOv99pLvH ) . vyyEAoupPK1zCZo8f14 
    * - ! - ! ! ! ! obgcDod6iX - GgyY22bSTF2c ) ) * 1267390895.631165957 
    ] * 1567598590 . tYZ6CS90n8 ) + jKqIaKRBN ( ;
}QI83eE 
;
struct JpkfWWdNHt ;
int ;
int IrGz7AR82J ( {
}
int ;
int BIsrbDloBDKvs2IBPD ( ) {
}
int ;
int YcYJqZ1ELEq ( int Luam0a8Rfhu8KuLj , int o4QOIlasA2 
  ) }
int ;
